--- a/parents/shilo/styles.css
+++ b/parents/shilo/styles.css
@@ -1,4 +1,4 @@
-ul {
+.top_bar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -6,11 +6,11 @@ ul {
   background-color: #333;
 }
 
-li {
+.top_bar li {
   float: left;
 }
 
-li a {
+.top_bar li a {
   display: block;
   color: white;
   text-align: center;
@@ -18,12 +18,34 @@ li a {
   text-decoration: none;
 }
 
-li a:hover:not(.active) {
+.top_bar li a:hover:not(.active) {
   background-color: #111;
 }
 
-.active {
+.top_bar .active {
   background-color: #4CAF50;
+}
+
+.side_bar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #f1f1f1;
+}
+
+.side_bar li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color on hover */
+.side_bar li a:hover {
+  background-color: #555;
+  color: white;
+  cursor: pointer;
 }
 
 body{
@@ -31,3 +53,20 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.main_screen {
+    position: absolute;
+    top: 100px;
+    left: 300px;
+    height: 600px;
+    width: 1000px;
+    background-color: white;
+    display: none;
+}
+
+/* for roi */
+
+/*
+.fibonachi {
+    font-size: 400px;
+} */
